# PoseTrack

./: .gitattributes  .gitignore  io_utils.py  playback.py  record.py  record.sh  render.sh  run_ove6d_icp.py  run_ove6d_icp_o3d_point2plane.py  run_ove6d_icp_o3d_point2point.py  run_ove6d_icp_o3d_single_frame.py  run_ove6d_icp_rendered.py  run_ove6d_icp_rendered_single_frame.py  run_ove6d_icp_single_frame.py  run_ove6d_tracknet.py
3DObjectTracking/: .gitignore
3DObjectTracking/ICG/: .gitignore  CMakeLists.txt~
3DObjectTracking/ICG/cam_manual_track/: CMakeLists.txt  CMakeLists.txt~  record_camera_sequence.cpp  record_camera_sequence.cpp~  run_generated_tracker.cpp  run_on_camera_sequence.cpp~  run_on_recorded_sequence.cpp  run_on_recorded_sequence.cpp~
3DObjectTracking/ICG/html/: md_readme.html  pages.html
3DObjectTracking/ICG/latex/: md_readme.tex  refman.tex
3DObjectTracking/ICG/recordings/: color_camera.yaml  depth_camera.yaml
3DObjectTracking/ICG/src/: CMakeLists.txt~  pose_publisher.cpp~  tracker.cpp  (+2 more)
data/recordings/: huawei_box_short.hdf5
ove6d/: .gitignore
ove6d/configs/: config.py
ove6d/dataset/: demo_dataset.py
ove6d/lib/: detectron_segmentation.py  geometry.py  network.py  ove6d.py  pplane_ICP.py  preprocess.py  rendering.py
ove6d/utility/: cam_control.py  load_object_codebooks.py  load_pose_estimator.py  load_segmentation_model.py
scripts/: playback.py  playback_recording.py  playback_rendering.py  record.py  run_ove6d_multiobject.py
scripts/captured/: run_ove6d_icp_o3d_point2plane_captured.py  run_ove6d_icp_o3d_point2point_captured.py
(+313 files in other folders)
